# obs-studio

./: .gitignore  CMakeLists.txt
UI/: BusyIndicator.cpp  BusyIndicator.h  CMakeLists.txt  DlgInitEvent.cpp  DlgInitEvent.h  DlgLogin.cpp  DlgLogin.h  DlgRooms.cpp  DlgRooms.h  obs-app.cpp  obs-app.hpp  window-basic-auto-config.cpp  window-basic-auto-config.hpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-profiles.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
UI/forms/: BusyIndicator.ui  DlgLogin.ui  DlgRooms.ui  OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
cmake/Modules/: FindLibh264.cmake
libobs/: CMakeLists.txt  obs-encoder.c  obs-encoder.h  obs-internal.h  obs-module.c  obs-output.c  obs-source.c  obs-video-gpu-encode.c  obs-video.c  obs.c  obs.h
libobs/media-io/: video-io.c
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: jim-nvenc.c  obs-ffmpeg-nvenc.c  obs-ffmpeg.c
plugins/obs-ffmpeg/data/locale/: en-US.ini
plugins/obs-h264/: CMakeLists.txt  obs-h264-plugin-main.c  obs-h264.c  obs-h264.cpp
plugins/obs-outputs/: rtmp-stream.c  rtmp-stream.h  rtmp-windows.c
plugins/win-wasapi/: win-wasapi.cpp
